src/App.css
:root {
  --white: hsl(0, 0%, 100%);
  --stone100: hsl(30, 54%, 90%);
  --stone150: hsl(30, 18%, 87%);
  --stone600: hsl(30, 10%, 34%);
  --stone900: hsl(24, 5%, 18%);
  --brown800: hsl(14, 45%, 36%);
  --rose800: hsl(332, 51%, 32%);
  --rose50: hsl(330, 100%, 98%);
}

body {
  background: var(--stone100);
  font-family: "Outfit", sans-serif;
  font-size: 16px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 5rem 0;
  box-sizing: border-box;
}

.container {
  display: flex;
  justify-content: center;
  width: 50vw;
  padding-bottom: 3rem;
  background: var(--white);
  border-radius: 15px;
}

.recipe-container {
  width: 90%;
  padding-top: 3rem;
}

img {
  width: 100%;
  object-fit: contain;
  border-radius: 15px;
}

h1 {
  font-family: "Young Serif", serif;
  font-weight: 400;
  font-size: 3.25rem;
  margin: 30px 0 10px 0;
}

p {
  font-size: 1.35rem;
}

.title p {
  font-size: 1.3rem;
  margin-right: 20px;
}

.prep {
  background: var(--rose50);
  border-radius: 15px;
  padding: 10px 35px;
  margin: 40px 0;
}

.prep h2 {
  color: var(--rose800);
}

.bold {
  font-weight: 600;
}

.prep ul {
  padding-inline-start: 30px;
}

.prep li {
  line-height: 2;
  padding-left: 20px;
  font-size: 1.2rem;
}

.ingredients h2,
.instructions h2,
.nutrition h2 {
  font-family: "Young Serif", serif;
  font-size: 2rem;
  color: var(--rose800);
  letter-spacing: 1px;
}

.ingredients ul,
.instructions ul {
  padding-inline-start: 30px;
  margin-top: 0px;
  margin-bottom: 30px;
}

hr {
  border: 1px solid lightgray;
}

.ingredients li,
.instructions li {
  margin-bottom: 16px;
  padding-left: 20px;
}

.ingredients li {
  font-size: 1.2rem;
}

.instructions li {
  font-size: 1.35rem;
}

.instructions li::marker {
  color: var(--rose800);
  font-weight: 800;
}

table {
  width: 100%;
  font-size: 1.3rem;
  border-collapse: collapse;
}

tr:not(:last-child) {
  border-bottom: 1px solid lightgrey;
}

tr:last-child td {
  padding: 20px 50px 0px 50px;
}

td {
  padding: 20px 50px;
}

td:nth-child(2) {
  color: var(--rose800);
  font-weight: 800;
  padding-right: 75px;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
  body {
    margin: 0;
  }

  .container {
    width: 100vw;
    border-radius: 0px;
  }

  .recipe-container {
    width: 100%;
    padding: 0;
  }

  img {
    border-radius: 0;
  }

  section {
    width: 85%;
    margin: 0 auto;
  }

  h1 {
    font-size: 2.5rem;
  }

  .title p {
    font-size: 16.7px;
  }

  .prep span {
    padding-right: 5px;
  }

  .prep ul {
    padding: 0 0 0 0px;
  }

  .prep li {
    padding: 0;
    margin-bottom: 10px;
    line-height: 1.3;
    display: flex;
    align-items: center;
  }

  .prep li::before {
    content: "";
    width: 0.35rem;
    height: 0.35rem;
    border-radius: 50%;
    background: black;
    margin: 0 2.25rem 0 0.5rem;
  }

  .instructions ol {
    padding-left: 30px;
  }

  .instructions li {
    font-size: 17.8px;
  }

  p {
    font-size: 19px;
  }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) and (max-width: 767px) {
  body {
    margin: 0;
  }

  .container {
    width: 100vw;
    border-radius: 0px;
  }

  .recipe-container {
    width: 100%;
    padding: 0;
  }

  img {
    border-radius: 0;
  }

  section {
    width: 85%;
    margin: 0 auto;
  }

  h1 {
    font-size: 2.5rem;
  }

  .title p {
    font-size: 16.7px;
  }

  .prep span {
    padding-right: 5px;
  }

  .prep ul {
    padding: 0 0 0 0px;
  }

  .prep li {
    padding: 0;
    margin-bottom: 10px;
    line-height: 1.3;
    display: flex;
    align-items: center;
  }

  .prep li::before {
    content: "";
    width: 0.35rem;
    height: 0.35rem;
    border-radius: 50%;
    background: black;
    margin: 0 2.25rem 0 0.5rem;
  }

  .instructions ol {
    padding-left: 30px;
  }

  .instructions li {
    font-size: 17.8px;
  }

  p {
    font-size: 19px;
  }
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) and (max-width: 991px) {
  .container {
    width: 80vw;
  }
}

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) and (max-width: 1199px) {
  .container {
    width: 66vw;
  }
}

/* Extra large devices (large laptops and desktops, 1200px and up) */
@media only screen and (min-width: 1200px) {
}

